fixed dead code, replaced pepper with rc4, etc