@@ -7,3 +7,8 @@ Thanks for patience.
 Authors:
  - https://vk.com/tarik02_coder
  - https://vk.com/xset_official
+
+
+#### Setup
+```mvn clean package```
+```java -jar target\private-server-1.0-SNAPSHOT.jar``` or ```java --add-opens java.base/java.nio=ALL-UNNAMED -jar target\private-server-1.0-SNAPSHOT.jar```
